jwt ve authorization

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets -->
-
+<script src="https://storage.googleapis.com/montco-stats/javascript/vis-4.17.0/dist/vis.js" type="text/javascript"></script>
+<link href="https://storage.googleapis.com/montco-stats/javascript/vis-4.17.0/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
