--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,3 +39,13 @@ layout: default
     </div>
   </article>
 </main>
+
+<!-- Stuff for jsarr tag  -->
+
+{% for js in page.jsarr %}
+  <script type="text/javascript">
+      {% include {{ js }} %}
+  </script>
+{% endfor %}
+
+<!-- End Stuff for jsarr tag  -->
