--- a/themes/leaneon/layouts/partials/footer.html
+++ b/themes/leaneon/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<div id="footer" class="container">
     <div class="copyright">
         {{ replace .Site.Copyright "{year}" now.Year }}
     </div>
