--- a/themes/leaneon/static/css/style.css
+++ b/themes/leaneon/static/css/style.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
 
 :root {
@@ -329,5 +328,9 @@ div.highlight {
   border: solid 2px #0014ff;
   box-shadow: 15px 15px 0 0 #000a3a;
   font-size: 14px;
+  overflow-x: scroll;
+}
+
+pre {
   overflow-x: scroll;
 }
